--- a/build.gradle
+++ b/build.gradle
@@ -30,3 +30,10 @@ compileJava {
 compileTestJava {
     options.compilerArgs = ["-Xlint:all"]
 }
+
+task generateSql(dependsOn: 'classes', type: JavaExec) {
+    main = 'org.chrisguitarguy.hibernateplay.SchemaGenerator'
+    classpath = sourceSets.main.runtimeClasspath
+    // this is a lame way to get the resource path...
+    args = ['org.chrisguitarguy.hibernateplay', "src/main/resources/sql"]
+}
