Print stuff for tests

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,12 @@ dependencies {
     )
 }
 
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+
 compileJava {
     options.compilerArgs = ["-Xlint:all"]
 }
